=== HEAD

* Order by best results first when using the Database#full_text_search :rank option on PostgreSQL (chanks) (#1101)

* Run Database#table_exists? inside a savepoint if currently in a transaction and the database supports savepoints (jeremyevans) (#1100)

* Allow Database#transaction :retry_on option to work when using savepoints (jeremyevans)

* Allow for external adapters to implement Dataset#date_add_sql_append to integrate with the date_arithmetic extension (jeremyevans)

* Add Dataset#insert_empty_columns_values private method for easy overriding for databases that don't support INSERT with DEFAULT VALUES (jeremyevans)

=== 4.28.0 (2015-11-02)

* Add boolean_subsets plugin, which adds a subset for each boolean column (jeremyevans)

* Add subset_conditions plugin, which adds a method for each subset returning the filter conditions for the subset (jeremyevans)

* Make the list plugin work better with the auto_validations plugin when there is a validation on the position column (jeremyevans)

* Make to_csv for model datasets call instance methods, just like Model#to_csv, in the csv_serializer plugin (skrobul) (#1088)

* Raise Sequel::NoExistingObject instead of generic error if Model#refresh can't find the related row (jeremyevans)

=== 4.27.0 (2015-10-01)

* Don't stub Sequel.synchronize on MRI (YorickPeterse) (#1083)

* Make bin/sequel warn if given arguments that it doesn't use (jeremyevans)

* Fix the order of referenced composite keys returned by Database#foreign_key_list on PostgreSQL (jeremyevans) (#1081)

* Recognize another disconnect error in the jdbc/postgresql adapter (jeremyevans)

* In the active model plugin, make Model#persisted? return false if the transaction used for creation is rolled back (jeremyevans) (#1076)

* Use primary_key :keep_order option in the schema dumper if the auto incrementing column is not the first column in the table (jeremyevans)
